--- a/index.html
+++ b/index.html
@@ -740,33 +740,36 @@
           подготовленный и отточенный для решения такой задачи. Но, тем не мнее, мы можем провести Skype-собеседование и
           набрать для вас «Команду мечты» на время старта. </p>
       </div>
-      <div class="col-md-4 pl-30 personal-aside">
-        <h3>Обучим не только
-          персонал, но и вас
-          правильно работать
-          с персоналом!</h3>
-        <ul class="personal-aside__list">
-          <li class="personal-aside___item">
-            Как сделать так, чтобы люди хотели работать у вас!
-          </li>
-          <li class="personal-aside___item">
-            Как замотивировать продавцов работать эффективнее с каждым днем!
-          </li>
-          <li class="personal-aside___item">
-            Какие KPI влияют на результат работы персонала!
-          </li>
-          <li class="personal-aside___item">
-            Расскажем 9 золоты правил продаж, которые позволя менеджерам продавать лучше
-          </li>
-          <li class="personal-aside___item">
-            Почему у вас не будет текучки и почему персонал будет вас любить
-          </li>
-          <li class="personal-aside___item">
-            Как менеджер может стать другом руководителю и работать как для себя
-          </li>
-        </ul>
-        <button>Узнать подробнее</button>
-        <a href="" type="tel">8 910 355-36-12</a>
+      <div class="col-md-4 personal-aside">
+        <div class="personal-aside__wrapper">
+          <h3>Обучим не только
+            персонал, но и вас
+            правильно работать
+            с персоналом!</h3>
+          <ul class="personal-aside__list">
+            <li class="personal-aside___item">
+              Как сделать так, чтобы люди хотели работать у вас!
+            </li>
+            <li class="personal-aside___item">
+              Как замотивировать продавцов работать эффективнее с каждым днем!
+            </li>
+            <li class="personal-aside___item">
+              Какие KPI влияют на результат работы персонала!
+            </li>
+            <li class="personal-aside___item">
+              Расскажем 9 золоты правил продаж, которые позволя менеджерам продавать лучше
+            </li>
+            <li class="personal-aside___item">
+              Почему у вас не будет текучки и почему персонал будет вас любить
+            </li>
+            <li class="personal-aside___item">
+              Как менеджер может стать другом руководителю и работать как для себя
+            </li>
+          </ul>
+        </div>
+
+        <button class="personal__btn ">Узнать подробнее</button>
+        <a href="" class="personal__phone phone-number phone-number--black" type="tel">8 910 355-36-12</a>
       </div>
     </div>
   </div>
@@ -816,86 +819,101 @@
     </div>
   </div>
 </div>
-<div class="icons-line">
-  <img src="" alt="полоса с иконками">
+<div class="icons-row">
+  <div class="container ">
+    <div class="row">
+      <div class="col-12 icons">
+        <img src="/img/b4.jpg" alt="">
+      </div>
+    </div>
+  </div>
 </div>
 <section class="data-base">
-  <div class="row">
-    <div class="col-md-8">
-      <h3>Получить коммерческое предложение</h3>
-    </div>
-    <div class="col-md-4">
-      <img src="" alt="фото замка">
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-3">
-      <div class="number">35</div>
-      <div class="">Документов для работы магазина: договора, приказы, шаблоны, инструкции
-        и так далее.
+  <div class="container">
+    <div class="row">
+      <div class="col-md-9">
+        <h2 class="bottom-line">Откроем для вас доступ
+          в Эксклюзивную и ценнейшую
+          Базу знаний «Руль»</h2>
+      </div>
+      <div class="col-md-3">
+        <img src="/img/icons/lock-yellow.png" class="data-base__lock" alt="фото замка">
       </div>
     </div>
-    <div class="col-md-3">
-      <div class="number">289</div>
-      <div class="">Шаблона для полиграфии, визитки, рекламные макеты, таблички, вывески, наклейки, листовки, баннеры.
+    <div class="row pt-30 pb-30">
+      <div class="col-md-3">
+        <div class="data-base__number">35</div>
+        <div class="data-base__description">Документов для работы магазина: договора, приказы, шаблоны, инструкции
+          и так далее.
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="data-base__number">289</div>
+        <div class="data-base__description">Шаблона для полиграфии, визитки, рекламные макеты, таблички, вывески,
+          наклейки, листовки, баннеры.
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="data-base__number">7</div>
+        <div class="data-base__description">Финансовых таблиц для прогнозирования прибыли, анализа маркетинговых каналов
+          и прочее.
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="data-base__number">58</div>
+        <div class="data-base__description">Видео-мастер классов, в которых мы расскажем как работать в CRM, как
+          руководить магазином, как
+          действовать в кризис.
+        </div>
       </div>
     </div>
-    <div class="col-md-3">
-      <div class="number">7</div>
-      <div class="">Финансовых таблиц для прогнозирования прибыли, анализа маркетинговых каналов и прочее.</div>
-    </div>
-    <div class="col-md-3">
-      <div class="number">58</div>
-      <div class="">Видео-мастер классов, в которых мы расскажем как работать в CRM, как руководить магазином, как
-        действовать в кризис.
+    <div class="row pt-30">
+      <div class="col-md-6 offset-2">
+        <button>Получить коммерческое предложение</button>
       </div>
-    </div>
-
-  </div>
-  <div class="row">
-    <div class="col-md-6">
-      <button>Получить коммерческое предложение</button>
-    </div>
-    <div class="col-md-6">
-      <a href="">8 910 355-36-12</a>
+      <div class="col-md-4">
+        <a href="#" class="phone-number phone-number--black">8 910 355-36-12</a>
+      </div>
     </div>
   </div>
 </section>
-<div class="">
+<div class="audience">
   <div class="container">
-    <div class="col-md-6">
-      <div class="row">
-        <div class="col-md-3">
-          <img src="" alt="уартинка марки">
-        </div>
-        <div class="col-md-3">
-          <img src="" alt="уартинка марки">
-        </div>
-        <div class="col-md-3">
-          <img src="" alt="уартинка марки">
-        </div>
-        <div class="col-md-3">
-          <img src="" alt="уартинка марки">
-        </div>
-        <div class="col-md-3">
-          <img src="" alt="уартинка марки">
-        </div>
-        <div class="col-md-3">
-          <img src="" alt="уартинка марки">
-        </div>
-        <div class="col-md-3">
-          <img src="" alt="уартинка марки">
-        </div>
-        <div class="col-md-3">
-          <img src="" alt="уартинка марки">
+    <div class="row">
+      <div class="col-md-6 pr-30">
+        <div class="row">
+          <div class="col-md-3">
+            <img src="/img/brands/chevrole.png" width="98" alt="картинка марки">
+          </div>
+          <div class="col-md-3">
+            <img src="/img/brands/tayota.png" width="102" alt="картинка марки">
+          </div>
+          <div class="col-md-3">
+            <img src="/img/brands/mitsu.png" width="68" alt="картинка марки">
+          </div>
+          <div class="col-md-3">
+            <img src="/img/brands/opel.png" width="86" alt="картинка марки">
+          </div>
+          <div class="col-md-3">
+            <img src="/img/brands/hunday.png" width="97" alt="картинка марки">
+          </div>
+          <div class="col-md-3">
+            <img src="/img/brands/ww.png" width="68 " alt="картинка марки">
+          </div>
+          <div class="col-md-3">
+            <img src="/img/brands/ford.png" width="101" alt="уартинка марки">
+          </div>
+          <div class="col-md-3">
+            <img src="/img/brands/kia.png" width="81" alt="уартинка марки">
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col-md-6">
-      <h3>А это наша желанная
-        целевая аудитория :)</h3>
-      <p>Мы работаем с владельцами иномарок и автосервисами.
-        Рынок, который никогда не умрет!</p>
+      <div class="col-md-5 pl-30">
+        <h3 class="audience__title">А это наша желанная
+          целевая аудитория :)</h3>
+        <p class="audience__subtitle">Мы работаем с владельцами иномарок и автосервисами.
+          Рынок, который никогда не умрет!</p>
+      </div>
     </div>
   </div>
 </div>
@@ -903,37 +921,37 @@
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <h2>Предоставим все для
+        <h2 class="bottom-line">Предоставим все для
           онлайн и оффлайн-маркетинга</h2>
       </div>
       <div class="col-md-4">
-        <h3>Персональный сайт
+        <h3 class="left-square">Персональный сайт
           с наличием
           вашего склада</h3>
         <img src="" alt="фото">
-        <p>Постоянно обновляемый и актуальный сайт, который позволяет эффективно монетизировать онлайн-трафик и
+        <p class="pl-30">Постоянно обновляемый и актуальный сайт, который позволяет эффективно монетизировать онлайн-трафик и
           генерировать стабильный оффлай-трафик.</p>
       </div>
       <div class="col-md-4">
-        <h3>Проверенные
+        <h3 class="left-square">Проверенные
           рекламные
           кампании</h3>
         <img src="" alt="фото">
-        <p>У нас есть та самая заветная кнопка «Включения потока клиентов». Мы дадим четкую инструкцию, как её
+        <p class="pl-30">У нас есть та самая заветная кнопка «Включения потока клиентов». Мы дадим четкую инструкцию, как её
           активировать и как управлять ))) </p>
       </div>
       <div class="col-md-4">
-        <h3>Статистику
+        <h3 class="left-square">Статистику
           по эффективности
           каналов рекламы</h3>
         <img src="" alt="фото">
-        <p>За годы работы мы собрали гигантское количество данных, на основе анализа которых мы и строим стратегии
+        <p class="pl-30">За годы работы мы собрали гигантское количество данных, на основе анализа которых мы и строим стратегии
           маркетинга в различных ситуациях, в том числе при открытии нового магазина.</p>
       </div>
     </div>
   </div>
 </section>
-<section class="plan">
+<section class="plan pb-30 pt-30">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
@@ -951,17 +969,17 @@
 <section class="promotion">
   <div class="container">
     <div class="row">
-      <div class="col-md-12">
-        <h2>Помогаем с продвижением</h2>
+      <div class="col-md-12 pb-30">
+        <h2 class="bottom-line">Помогаем с продвижением</h2>
       </div>
       <div class="col-md-4">
         <div class="d-flex flex-column">
-          <img src="" alt="фото банера">
+          <img src="/img/promotion/b1.jpg" width="350" alt="фото банера">
           <h4>Разрабатываем макеты</h4>
           <p>
             В нашей базе гигантское количество листовок, баннер, макетов для наружной рекламы и всего, что может только
             потребоваться. </p>
-          <img src="" alt="">
+          <img src="/img/promotion/b4.jpg" width="350" alt="">
           <h4>Постоянно оптимизируем и улучшаем интерне-трафик</h4>
           <p>В нашей базе гигантское количество листовок, баннер, макетов для наружной рекламы и всего, что может только
             потребоваться. </p>
@@ -969,12 +987,12 @@
       </div>
       <div class="col-md-4">
         <div class="d-flex flex-column">
-          <img src="" alt="фото банера">
+          <img src="/img/promotion/b2.jpg" width="350" alt="фото банера">
           <h4>Рисуем приветственные экраны</h4>
           <p>У каждого менеджера стоит монитор, который служит одновременно и мотиватором для дополнительных продаж,
             личного знакомства с менеджером, в дополнение к бейджику и так же дублирующим экраном при сложностях в
             подборе запчастей. </p>
-          <img src="" alt="">
+          <img src="/img/promotion/b5.jpg" width="350" alt="">
           <h4>Изготавливаем видео-рекламу</h4>
           <p>У каждого менеджера стоит монитор, который служит одновременно и мотиватором для дополнительных продаж,
             личного знакомства с менеджером, в дополнение к бейджику и так же дублирующим экраном при сложностях в
@@ -983,7 +1001,7 @@
       </div>
       <div class="col-md-4">
         <div class="d-flex flex-column">
-          <img src="" alt="">
+          <img src="/img/promotion/b3.jpg" width="350" alt="">
           <h4>Даём все, что нужно для ведения социальных сетей</h4>
           <p>У каждого менеджера стоит монитор, который служит одновременно и мотиватором для дополнительных продаж,
             личного знакомства с менеджером, в дополнение к бейджику и так же дублирующим экраном при сложностях в
@@ -993,14 +1011,14 @@
     </div>
   </div>
 </section>
-<section class="control">
+<section class="control ">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2>Контролируйте магазин онлайн</h2>
+        <h2 class="bottom-line">Контролируйте магазин онлайн</h2>
       </div>
       <div class="col-md-7">
-        <img src="" alt="фото">
+        <img src="/img/control/control1.jpg" width="585" alt="фото">
       </div>
       <div class="col-md-5">
         <h3>
@@ -1023,7 +1041,7 @@
           кладовщиков до руковдителя! </p>
       </div>
       <div class="col-md-5">
-        <img src="" alt="фото">
+        <img src="/img/control/control2.jpg" width="437" alt="фото">
       </div>
     </div>
   </div>
@@ -1032,11 +1050,11 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2>Сколько зарабатывает
+        <h2 class="bottom-line">Сколько зарабатывает
           один магазин «Руль»</h2>
       </div>
       <div class="col-md-4">
-        <h3>Руль в Липецке,
+        <h3 class="left-square">Руль в Липецке,
           ул. Первомайская</h3>
         <ul>
           <li> Открылся май 2009 г.</li>
@@ -1048,7 +1066,7 @@
         </ul>
       </div>
       <div class="col-md-4">
-        <h3>Руль в Липецке,
+        <h3 class="left-square">Руль в Липецке,
           район «Сокола»</h3>
         <ul>
           <li> Открылся май 2017 г.</li>
@@ -1060,7 +1078,7 @@
         </ul>
       </div>
       <div class="col-md-4">
-        <h3>Руль в Липецке,
+        <h3 class="left-square">Руль в Липецке,
           «Сырский рудник»</h3>
         <ul>
           <li> Открылась январь 2014 г.</li>
@@ -1074,55 +1092,61 @@
     </div>
   </div>
 </section>
-<div>
+<div class="appeal">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h3>Отройте магазин автозапчастей
+        <h3 class="text-center appeal__title">Отройте магазин автозапчастей<br>
           по франшизе «Руль»</h3>
-        <p>Присоединяйтесь к нашей команде!</p>
+        <p class="appeal__subtitle">Присоединяйтесь к нашей команде!</p>
       </div>
     </div>
   </div>
 </div>
-<div class="form">
+<div class="form pt-30">
   <div class="container">
-    <form id="contactForm">
-      <div class="form-group">
-        <div class="input-group">
-          <input id="name" name="name" class="form-control" placeholder="ваше имя" type="text">
-          <div class="input-group-addon"><i class="fa fa-user fa-fw"></i></div>
-        </div>
+    <div class="row">
+      <div class="col-md-6 offset-3">
+        <form id="contactForm">
+          <div class="form-group">
+            <div class="input-group">
+              <input id="name" name="name" class="form-control" placeholder="ваше имя" type="text">
+              <div class="input-group-addon"></div>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="input-group">
+              <input id="mail" name="email" class="form-control" placeholder="ваш e-mail" type="email">
+              <div class="input-group-addon"></div>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="input-group">
+              <input id="phone" name="phone" class="form-control" placeholder="телефон" type="tel">
+              <div class="input-group-addon"></div>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="input-group">
+              <input id="promocode" name="city" class="form-control" placeholder="Город для открытия" type="text">
+              <div class="input-group-addon"></i></div>
+            </div>
+          </div>
+          <p class="text-left">
+            <label>
+              <input form="contactForm" autocomplete="off" onclick="toggleButton('submitjoin', this)" type="checkbox">
+              Отправляя сведения через электронную форму, Вы даете согласие на обработку Ваших персональных данных
+            </label>
+          </p>
+          <button id="submitjoin" type="submit"  disabled="">Отправить заявку</button>
+        </form>
+        <p>Отправьте заявку на получение подробного коммерческого предложения, мы вышлем вам смету на открытие магазинов
+          в
+          различных фарматах, с различными объемами инвестиций.</p>
       </div>
-      <div class="form-group">
-        <div class="input-group">
-          <input id="mail" name="email" class="form-control" placeholder="ваш e-mail" type="email">
-          <div class="input-group-addon"><i class="fa fa-envelope fa-fw"></i></div>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="input-group">
-          <input id="phone" name="phone" class="form-control" placeholder="телефон" type="tel">
-          <div class="input-group-addon"><i class="fa fa-phone fa-fw"></i></div>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="input-group">
-          <input id="promocode" name="city" class="form-control" placeholder="Город для открытия" type="text">
-          <div class="input-group-addon"><i class="fa fa-barcode fa-fw"></i></div>
-        </div>
-      </div>
-      <p class="text-left">
-        <label>
-          <input form="contactForm" autocomplete="off" onclick="toggleButton('submitjoin', this)" type="checkbox">
-          Отправляя сведения через электронную форму, Вы даете согласие на обработку Ваших персональных данных
-        </label>
-      </p>
-      <button id="submitjoin" type="submit" class="btn btn-primary  w100" disabled="">Отправить заявку</button>
-    </form>
-    <p>Отправьте заявку на получение подробного коммерческого предложения, мы вышлем вам смету на открытие магазинов в
-      различных фарматах, с различными объемами инвестиций.</p>
+    </div>
   </div>
+
 </div>
 <div class="slogan">
   «пора быть у руля»
@@ -1163,12 +1187,12 @@
     </div>
   </div>
 </div>
-<footer>
+<footer class="page-footer">
   <div class="container">
     <div class="row">
-      <div class="col-md-4">© 2008-2018 Сеть магазинов «Руль»</div>
-      <div class="col-md-4"><a href="">Политика конфеденциальности</a></div>
-      <div class="col-md-4">Разработка сайта — Компания <a href="">«Бикселс»</a></div>
+      <div class="col-md-4 page-footer__copyright">© 2008-2018 Сеть магазинов «Руль»</div>
+      <div class="col-md-4 page-footer__privacy"><a href="">Политика конфеденциальности</a></div>
+      <div class="col-md-4 page-footer__development">Разработка сайта — Компания <a href="">«Бикселс»</a></div>
     </div>
   </div>
 </footer>
