закончил базовую верстку без галерей

--- a/index.html
+++ b/index.html
@@ -928,43 +928,46 @@
         <h3 class="left-square">Персональный сайт
           с наличием
           вашего склада</h3>
-        <img src="" alt="фото">
-        <p class="pl-30">Постоянно обновляемый и актуальный сайт, который позволяет эффективно монетизировать онлайн-трафик и
+        <div class="marketing__img-wrapper"><img src="/img/marketing/marketing1.jpg" width="229" alt="фото"></div>
+        <p class="pl-30">Постоянно обновляемый и актуальный сайт, который позволяет эффективно монетизировать
+          онлайн-трафик и
           генерировать стабильный оффлай-трафик.</p>
       </div>
       <div class="col-md-4">
         <h3 class="left-square">Проверенные
           рекламные
           кампании</h3>
-        <img src="" alt="фото">
-        <p class="pl-30">У нас есть та самая заветная кнопка «Включения потока клиентов». Мы дадим четкую инструкцию, как её
+        <div class="marketing__img-wrapper"><img src="/img/marketing/marketing2.jpg" width="227" alt="фото"></div>
+        <p class="pl-30">У нас есть та самая заветная кнопка «Включения потока клиентов». Мы дадим четкую инструкцию,
+          как её
           активировать и как управлять ))) </p>
       </div>
       <div class="col-md-4">
         <h3 class="left-square">Статистику
           по эффективности
           каналов рекламы</h3>
-        <img src="" alt="фото">
-        <p class="pl-30">За годы работы мы собрали гигантское количество данных, на основе анализа которых мы и строим стратегии
+        <div class="marketing__img-wrapper"><img src="/img/marketing/marketing3.jpg" width="312" alt="фото"></div>
+        <p class="pl-30">За годы работы мы собрали гигантское количество данных, на основе анализа которых мы и строим
+          стратегии
           маркетинга в различных ситуациях, в том числе при открытии нового магазина.</p>
       </div>
     </div>
   </div>
 </section>
 <section class="plan pb-30 pt-30">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div>Предоставляем вам:</div>
-        <h2>Пошаговый план
-          открытия</h2>
-        <p>Собственного магазина автозапчастей!</p>
-      </div>
-      <div class="col-md-12">
-        <button>Запросить смету на открытие</button>
+  <div class="plan__top-wrapper">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 offset-2">
+          <div class="plan__suptittle">Предоставляем вам:</div>
+          <h2 class="plan__title">Пошаговый план
+            открытия</h2>
+          <p class="plan__subtitle">Собственного магазина автозапчастей!</p>
+        </div>
       </div>
     </div>
   </div>
+  <button class="plan-btn">Запросить смету на открытие</button>
 </section>
 <section class="promotion">
   <div class="container">
@@ -976,8 +979,8 @@
         <div class="d-flex flex-column">
           <img src="/img/promotion/b1.jpg" width="350" alt="фото банера">
           <h4>Разрабатываем макеты</h4>
-          <p>
-            В нашей базе гигантское количество листовок, баннер, макетов для наружной рекламы и всего, что может только
+          <p class="mb-30">В нашей базе гигантское количество листовок, баннер, макетов для наружной рекламы и всего,
+            что может только
             потребоваться. </p>
           <img src="/img/promotion/b4.jpg" width="350" alt="">
           <h4>Постоянно оптимизируем и улучшаем интерне-трафик</h4>
@@ -989,7 +992,8 @@
         <div class="d-flex flex-column">
           <img src="/img/promotion/b2.jpg" width="350" alt="фото банера">
           <h4>Рисуем приветственные экраны</h4>
-          <p>У каждого менеджера стоит монитор, который служит одновременно и мотиватором для дополнительных продаж,
+          <p class="mb-30">У каждого менеджера стоит монитор, который служит одновременно и мотиватором для
+            дополнительных продаж,
             личного знакомства с менеджером, в дополнение к бейджику и так же дублирующим экраном при сложностях в
             подборе запчастей. </p>
           <img src="/img/promotion/b5.jpg" width="350" alt="">
@@ -1014,7 +1018,7 @@
 <section class="control ">
   <div class="container">
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-12 mb-15">
         <h2 class="bottom-line">Контролируйте магазин онлайн</h2>
       </div>
       <div class="col-md-7">
@@ -1025,23 +1029,25 @@
           Видео-наблюдение
           в вашем телефоне
         </h3>
-        <p>Описание функционала на этом экране, Разработанная на основе десятилетнего опыта проб и ошибок в продаже
+        <p class="font-italic">Описание функционала на этом экране, Разработанная на основе десятилетнего опыта проб и
+          ошибок в продаже
           запчастей с целью опеспечить максимальную отдачу от системы в процессе работы персонала от менеджеров и
           кладовщиков до руковдителя! </p>
-        <p>
+        <p class="font-italic">
           Описание функционала на этом экране, Разработанная на основе десятилетнего опыта проб и ошибок в продаже
           запчастей с целью опеспечить максимальную отдачу от системы в процессе работы персонала от менеджеров и
           кладовщиков до руковдителя!
         </p>
       </div>
-      <div class="col-md-7">
+      <div class="col-md-6">
         <h3>Контрлируйте работу из любой точки мира</h3>
-        <p>Описание функционала на этом экране, Разработанная на основе десятилетнего опыта проб и ошибок в продаже
+        <p class="font-italic">Описание функционала на этом экране, Разработанная на основе десятилетнего опыта проб и
+          ошибок в продаже
           запчастей с целью опеспечить максимальную отдачу от системы в процессе работы персонала от менеджеров и
           кладовщиков до руковдителя! </p>
       </div>
-      <div class="col-md-5">
-        <img src="/img/control/control2.jpg" width="437" alt="фото">
+      <div class="col-md-5 offset-1">
+        <img src="/img/control/control2.jpg" class="mt-30" width="437" alt="фото">
       </div>
     </div>
   </div>
@@ -1049,45 +1055,50 @@
 <section class="profit">
   <div class="container">
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-7">
         <h2 class="bottom-line">Сколько зарабатывает
           один магазин «Руль»</h2>
       </div>
+    </div>
+    <div class="row">
       <div class="col-md-4">
         <h3 class="left-square">Руль в Липецке,
           ул. Первомайская</h3>
-        <ul>
-          <li> Открылся май 2009 г.</li>
-          <li>Инвестиции: 5,8 млн руб.</li>
-          <li>Окупаемость: 1,5 года</li>
-          <li>В октябре 2017 года</li>
-          <li>Выручка: 4,796 млн руб</li>
-          <li>Прибыль (до налога на прибыль): 1,134 млн руб.</li>
+        <ul class="profit__list">
+          <li class="profit__item"> Открылся май 2009 г.</li>
+          <li class="profit__item">Инвестиции: 5,8 млн руб.</li>
+          <li class="profit__item">Окупаемость: 1,5 года</li>
+          <li class="profit__item">В октябре 2017 года</li>
+          <li class="profit__item">Выручка: 4,796 млн руб</li>
+          <li class="profit__item">Прибыль <span>(до налога на прибыль):</span> 1,134 млн руб.</li>
         </ul>
+        <a href="#" class="ml-30 plan__link">Отчет о прибылях и убытках</a>
       </div>
       <div class="col-md-4">
         <h3 class="left-square">Руль в Липецке,
           район «Сокола»</h3>
-        <ul>
-          <li> Открылся май 2017 г.</li>
-          <li>Инвестиции: 6,8 млн руб.</li>
-          <li>Окупаемость: в процессе окупаемости</li>
-          <li>В октябре 2017 года</li>
-          <li>Выручка: 2,296 млн руб.</li>
-          <li>Прибыль (до налога на прибыль): 0,528 млн руб.</li>
+        <ul class="profit__list">
+          <li class="profit__item"> Открылся май 2017 г.</li>
+          <li class="profit__item">Инвестиции: 6,8 млн руб.</li>
+          <li class="profit__item">Окупаемость: в процессе окуп аемосcти</li>
+          <li class="profit__item">В октябре 2017 года</li>
+          <li class="profit__item">Выручка: 2,296 млн руб.</li>
+          <li class="profit__item">Прибыль <span>(до налога на прибыль):</span> 0,528 млн руб.</li>
         </ul>
+        <a href="#" class="ml-30 plan__link">Отчет о прибылях и убытках</a>
       </div>
       <div class="col-md-4">
         <h3 class="left-square">Руль в Липецке,
           «Сырский рудник»</h3>
-        <ul>
-          <li> Открылась январь 2014 г.</li>
-          <li>Инвестиции: 5,8 млн руб.</li>
-          <li>Окупаемость: 1,5 года</li>
-          <li>В апреле 2017 года</li>
-          <li>Выручка: 4,588 млн руб.</li>
-          <li>Прибыль (до налога на прибыль): 1,019 млн руб.</li>
+        <ul class="profit__list">
+          <li class="profit__item"> Открылась январь 2014 г.</li>
+          <li class="profit__item">Инвестиции: 5,8 млн руб.</li>
+          <li class="profit__item">Окупаемость: 1,5 года</li>
+          <li class="profit__item">В апреле 2017 года</li>
+          <li class="profit__item">Выручка: 4,588 млн руб.</li>
+          <li class="profit__item">Прибыль <span>(до налога на прибыль):</span> 1,019 млн руб.</li>
         </ul>
+        <a href="#" class="ml-30 plan__link">Отчет о прибылях и убытках</a>
       </div>
     </div>
   </div>
@@ -1108,28 +1119,30 @@
     <div class="row">
       <div class="col-md-6 offset-3">
         <form id="contactForm">
+          <p class="text-center mb-30">Отправьте заявку на получение подробного коммерческого предложения, мы вышлем вам
+            смету на открытие магазинов в различных фарматах, с различными объемами инвестиций.</p>
           <div class="form-group">
             <div class="input-group">
-              <input id="name" name="name" class="form-control" placeholder="ваше имя" type="text">
-              <div class="input-group-addon"></div>
+              <input id="name" name="name" class="form-control" placeholder="Ваше имя" type="text">
+
             </div>
           </div>
           <div class="form-group">
             <div class="input-group">
-              <input id="mail" name="email" class="form-control" placeholder="ваш e-mail" type="email">
-              <div class="input-group-addon"></div>
+              <input id="mail" name="email" class="form-control" placeholder="Ваш e-mail" type="email">
+
             </div>
           </div>
           <div class="form-group">
             <div class="input-group">
-              <input id="phone" name="phone" class="form-control" placeholder="телефон" type="tel">
-              <div class="input-group-addon"></div>
+              <input id="phone" name="phone" class="form-control" placeholder="Телефон" type="tel">
+
             </div>
           </div>
           <div class="form-group">
             <div class="input-group">
               <input id="promocode" name="city" class="form-control" placeholder="Город для открытия" type="text">
-              <div class="input-group-addon"></i></div>
+
             </div>
           </div>
           <p class="text-left">
@@ -1138,11 +1151,11 @@
               Отправляя сведения через электронную форму, Вы даете согласие на обработку Ваших персональных данных
             </label>
           </p>
-          <button id="submitjoin" type="submit"  disabled="">Отправить заявку</button>
+          <button id="submitjoin" class="form-btn" type="submit" disabled="disabled">Отправить заявку</button>
         </form>
-        <p>Отправьте заявку на получение подробного коммерческого предложения, мы вышлем вам смету на открытие магазинов
-          в
-          различных фарматах, с различными объемами инвестиций.</p>
+      </div>
+      <div class="col-md-10 offset-1 mt-30 form__description">
+        <p>Отправьте заявку на получение подробного коммерческого предложения, мы вышлем вам смету на открытие магазинов в различных фарматах, с различными объемами инвестиций.</p>
       </div>
     </div>
   </div>
