add slic slider

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Руль</title>
   <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/fontawesome.min.css" rel="stylesheet">
+  <!--<link href="css/fontawesome.min.css" rel="stylesheet">-->
+  <link href="css/slick.css" rel="stylesheet">
+  <link href="css/slick-theme.css" rel="stylesheet">
   <link href="css/style.min.css" rel="stylesheet">
 </head>
 <body>
@@ -188,7 +190,7 @@
       </div>
       <div class="col-md-4">
         <div class="chains-stores__video">
-          <img src="/img/video1.jpg" alt="video" width="350">
+          <img src="./img/video1.jpg" alt="video" width="350">
           <a href="#" class="popup-youtube chains-stores__video-title">История компании
             за 5 минут</a>
         </div>
@@ -295,37 +297,37 @@
       <div class="col-12 col-md-9">
         <div class="sell-footer__list row">
           <div class="col-6 col-md-2 sell-footer-item">
-            <img class="sell-footer-item__img" src="/img/shell/shell1.svg" alt="картинка">
+            <img class="sell-footer-item__img" src="./img/shell/shell1.svg" alt="картинка">
             <div class="sell-footer-item__descriptoin">Детали двигателя,
               подвески,
               трансмиссии
             </div>
           </div>
           <div class="col-6 col-md-2 sell-footer-item">
-            <img class="sell-footer-item__img" src="/img/shell/shell2.svg" alt="картинка">
+            <img class="sell-footer-item__img" src="./img/shell/shell2.svg" alt="картинка">
             <div class="sell-footer-item__descriptoin">Моторные и
               трансмиссионные
               масла
             </div>
           </div>
           <div class="col-6 col-md-2 sell-footer-item">
-            <img class="sell-footer-item__img" src="/img/shell/shell3.svg" alt="картинка">
+            <img class="sell-footer-item__img" src="./img/shell/shell3.svg" alt="картинка">
             <div class="sell-footer-item__descriptoin">Электрика</div>
           </div>
           <div class="col-6 col-md-2 sell-footer-item">
-            <img class="sell-footer-item__img" src="/img/shell/shell4.svg" alt="картинка">
+            <img class="sell-footer-item__img" src="./img/shell/shell4.svg" alt="картинка">
             <div class="sell-footer-item__descriptoin">Кузовные
               элементы
             </div>
           </div>
           <div class="col-6 col-md-2 sell-footer-item">
-            <img class="sell-footer-item__img" src="/img/shell/shell5.svg" alt="картинка">
+            <img class="sell-footer-item__img" src="./img/shell/shell5.svg" alt="картинка">
             <div class="sell-footer-item__descriptoin">Технические
               жидкости
             </div>
           </div>
           <div class="col-6 col-md-2 sell-footer-item">
-            <img class="sell-footer-item__img" src="/img/shell/shell6.svg" alt="картинка">
+            <img class="sell-footer-item__img" src="./img/shell/shell6.svg" alt="картинка">
             <div class="sell-footer-item__descriptoin">Расходные
               материалы
             </div>
@@ -776,36 +778,54 @@
 </section>
 <div class="fluid-gallery">
   <div class="container-fluid">
-    <div class="row">
+    <div class="row slick-slider pb-30">
       <div class="col-md-3">
-        <img src="" alt="фото">
+        <img src="/img/video2.jpg" alt="фото">
       </div>
       <div class="col-md-3">
-        <img src="" alt="фото">
+        <img src="/img/video2.jpg" alt="фото">
       </div>
       <div class="col-md-3">
-        <img src="" alt="фото">
+        <img src="/img/video2.jpg" alt="фото">
       </div>
       <div class="col-md-3">
-        <img src="" alt="фото">
+        <img src="/img/video2.jpg" alt="фото">
+      </div>
+      <div class="col-md-3">
+        <img src="/img/video2.jpg" alt="фото">
+      </div>
+      <div class="col-md-3">
+        <img src="/img/video2.jpg" alt="фото">
+      </div>
+      <div class="col-md-3">
+        <img src="/img/video2.jpg" alt="фото">
       </div>
     </div>
   </div>
 </div>
 <div class="fluid-gallery">
   <div class="container-fluid">
-    <div class="row">
+    <div class="row slick-slider">
       <div class="col-md-3">
-        <img src="" alt="фото">
+        <img src="/img/video2.jpg" alt="фото">
       </div>
       <div class="col-md-3">
-        <img src="" alt="фото">
+        <img src="/img/video2.jpg" alt="фото">
       </div>
       <div class="col-md-3">
-        <img src="" alt="фото">
+        <img src="/img/video2.jpg" alt="фото">
       </div>
       <div class="col-md-3">
-        <img src="" alt="фото">
+        <img src="/img/video2.jpg" alt="фото">
+      </div>
+      <div class="col-md-3">
+        <img src="/img/video2.jpg" alt="фото">
+      </div>
+      <div class="col-md-3">
+        <img src="/img/video2.jpg" alt="фото">
+      </div>
+      <div class="col-md-3">
+        <img src="/img/video2.jpg" alt="фото">
       </div>
     </div>
   </div>
@@ -1166,36 +1186,54 @@
 </div>
 <div class="fluid-gallery">
   <div class="container-fluid">
-    <div class="row">
+    <div class="row slick-slider pb-30">
       <div class="col-md-3">
-        <img src="" alt="фото">
+        <img src="/img/video2.jpg" alt="фото">
       </div>
       <div class="col-md-3">
-        <img src="" alt="фото">
+        <img src="/img/video2.jpg" alt="фото">
       </div>
       <div class="col-md-3">
-        <img src="" alt="фото">
+        <img src="/img/video2.jpg" alt="фото">
       </div>
       <div class="col-md-3">
-        <img src="" alt="фото">
+        <img src="/img/video2.jpg" alt="фото">
+      </div>
+      <div class="col-md-3">
+        <img src="/img/video2.jpg" alt="фото">
+      </div>
+      <div class="col-md-3">
+        <img src="/img/video2.jpg" alt="фото">
+      </div>
+      <div class="col-md-3">
+        <img src="/img/video2.jpg" alt="фото">
       </div>
     </div>
   </div>
 </div>
 <div class="fluid-gallery">
   <div class="container-fluid">
-    <div class="row">
+    <div class="row slick-slider">
       <div class="col-md-3">
-        <img src="" alt="фото">
+        <img src="/img/video2.jpg" alt="фото">
       </div>
       <div class="col-md-3">
-        <img src="" alt="фото">
+        <img src="/img/video2.jpg" alt="фото">
       </div>
       <div class="col-md-3">
-        <img src="" alt="фото">
+        <img src="/img/video2.jpg" alt="фото">
       </div>
       <div class="col-md-3">
-        <img src="" alt="фото">
+        <img src="/img/video2.jpg" alt="фото">
+      </div>
+      <div class="col-md-3">
+        <img src="/img/video2.jpg" alt="фото">
+      </div>
+      <div class="col-md-3">
+        <img src="/img/video2.jpg" alt="фото">
+      </div>
+      <div class="col-md-3">
+        <img src="/img/video2.jpg" alt="фото">
       </div>
     </div>
   </div>
@@ -1209,9 +1247,8 @@
     </div>
   </div>
 </footer>
-
-<script src="js/svgxuse.min.js"></script>
 <script src="js/jquery-3.3.1.min.js"></script>
+<script src="js/slick.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/main.js"></script>
 </body>
